feat: 增强数据管理功能，新增备份与恢复接口
- 后端新增数据备份功能，上传时自动备份旧数据
- 新增恢复备份接口，支持从备份中恢复数据
- 前端调整布局，优化响应式设计，新增侧边栏和抽屉菜单
- 更新数据管理逻辑，确保数据操作后自动刷新数据

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -24,3 +24,24 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@media (max-width: 400px) {
+  .mini-tag {
+    padding-left: 2px !important;
+    padding-right: 2px !important;
+    font-size: 14px !important;
+    border-width: 0 !important;
+    min-width: 0 !important;
+    height: 22px !important;
+    line-height: 20px !important;
+  }
+  /* .mini-tag .ant-tag {
+    border-width: 0 !important;
+    padding-left: 2px !important;
+    padding-right: 2px !important;
+    font-size: 12px !important;
+    min-width: 0 !important;
+    height: 22px !important;
+    line-height: 20px !important;
+  } */
+}
